welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: reassignment to val
			return i = i + 1
                                 ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to nums.length - 1) {
               ^